--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="background.css" />
   </head>
   <style>
     body {
@@ -47,7 +48,7 @@
       position: absolute;
     }
   </style>
-  <body>
+  <body id="bg">
     <div id="canvasBox">
       <canvas id="background"></canvas>
       <canvas id="floor"></canvas>
@@ -59,4 +60,5 @@
   <script src="floor.js"></script>
   <script src="hurdle.js"></script>
   <script src="main.js"></script>
+  <script src="hp.js"></script>
 </html>
