--- a/MS/game.html
+++ b/MS/game.html
@@ -54,5 +54,6 @@
   <script src="floor-1.js"></script>
   <script src="hurdle-1.js"></script>
   <script src="jelly-1.js"></script>
+  <script src="hp.js"></script>
   <script src="main.js"></script>
 </html>
