장애물 착지 구현 중

--- a/MS/game.html
+++ b/MS/game.html
@@ -50,6 +50,7 @@
       <canvas id="main"></canvas>
     </div>
   </body>
+  <script src="hp.js"></script>
   <script src="background.js"></script>
   <script src="floor-1.js"></script>
   <script src="hurdle-1.js"></script>
