--- a/MS/game.html
+++ b/MS/game.html
@@ -104,7 +104,7 @@
       <canvas id="main"></canvas>
       <img src="images/playicon2.png" alt="" id="playBtn" class="Btn">
       <img src="images/pauseicon.png" alt="" id="pauseBtn" class="Btn">
-      <div id="UI">
+      <!-- <div id="UI">
         <div class="map" id="map1">
           <img src="images/Map/first.png" alt="">
         </div>
@@ -119,7 +119,7 @@
         </div>
         <div class="map" id="map5">
           <img src="images/Map/fifth.png" alt="">
-        </div>
+        </div> -->
       </div>
   </body>
   <script src="hp.js"></script>
