--- a/MS/game.html
+++ b/MS/game.html
@@ -51,6 +51,7 @@
     </div>
   </body>
   <script src="background.js"></script>
+  <script src="hp.js"></script>
   <script src="floor-1.js"></script>
   <script src="hurdle-1.js"></script>
   <script src="jelly-1.js"></script>
