--- a/MS/map.html
+++ b/MS/map.html
@@ -44,7 +44,9 @@
       bigJelly.forEach((bigJelly) => {
         bigJelly.draw();
       });
-      skyHurdle.draw();
+      skyHurdle.forEach((skyHurdle) => {
+        skyHurdle.draw();
+      });
     }
     mapTest();
   </script>
