test.js 틀만 브랜치 바꿔서 작업

--- a/MS/game.html
+++ b/MS/game.html
@@ -56,5 +56,6 @@
   <script src="hurdle-1.js"></script>
   <script src="jelly-1.js"></script>
   <script src="hp.js"></script>
+  <script src="test.js"></script>
   <script src="main.js"></script>
 </html>
