play pause 버튼 기능 구현

--- a/MS/game.html
+++ b/MS/game.html
@@ -14,7 +14,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      outline: none;
+      /* outline: none; */
     }
     #canvasBox {
       width: 1000px;
@@ -122,12 +122,11 @@
         </div> -->
       </div>
   </body>
-  <script src="hp.js"></script>
   <script src="background.js"></script>
-  <script src="hp.js"></script>
   <script src="floor-1.js"></script>
   <script src="hurdle-1.js"></script>
   <script src="jelly-1.js"></script>
+  <script src="UI.js"></script>
   <script src="hp.js"></script>
   <!-- <script src="test.js"></script> -->
   <script src="main.js"></script>
