잠시 업데이트

--- a/MS/game.html
+++ b/MS/game.html
@@ -97,6 +97,9 @@
       top: 230px;
       left: 270px;
     }
+    #UI-background {
+      position: absolute;      
+    }
   </style>
   <body>
     <div id="canvasBox">
@@ -105,6 +108,7 @@
       <img src="images/playicon2.png" alt="" id="playBtn" class="Btn">
       <img src="images/pauseicon.png" alt="" id="pauseBtn" class="Btn">
       <!-- <div id="UI">
+        <img src="images/mapback.jpg" alt="" id="UI-background">
         <div class="map" id="map1">
           <img src="images/Map/first.png" alt="">
         </div>
