--- a/MS/map.html
+++ b/MS/map.html
@@ -47,6 +47,12 @@
       skyHurdle.forEach((skyHurdle) => {
         skyHurdle.draw();
       });
+      floorlowHurdle.forEach((floorlowHurdle) => {
+        floorlowHurdle.draw();
+      });
+      floorhighHurdle.forEach((floorhighHurdle) => {
+        floorhighHurdle.draw();
+      });
     }
     mapTest();
   </script>
