충돌 함수 생성(재사용성 낮음)

--- a/MS/game.html
+++ b/MS/game.html
@@ -133,5 +133,7 @@
   <script src="UI.js"></script>
   <script src="hp.js"></script>
   <!-- <script src="test.js"></script> -->
+  <!-- <script src="test2.js"></script> -->
+  <!-- <script src="test3.js"></script> -->
   <script src="main.js"></script>
 </html>
