--- a/MS/map.html
+++ b/MS/map.html
@@ -44,14 +44,8 @@
       bigJelly.forEach((bigJelly) => {
         bigJelly.draw();
       });
-      skyHurdle.forEach((skyHurdle) => {
-        skyHurdle.draw();
-      });
-      floorlowHurdle.forEach((floorlowHurdle) => {
-        floorlowHurdle.draw();
-      });
-      floorhighHurdle.forEach((floorhighHurdle) => {
-        floorhighHurdle.draw();
+      hurdle.forEach((hurdle) => {
+        hurdle.draw();
       });
     }
     mapTest();
