--- a/MS/map.html
+++ b/MS/map.html
@@ -44,6 +44,9 @@
       bigJelly.forEach((bigJelly) => {
         bigJelly.draw();
       });
+      hpPotion.forEach((hpPotion) => {
+        hpPotion.draw();
+      });
       hurdle.forEach((hurdle) => {
         hurdle.draw();
       });
