일단 다 병합

--- a/MS/map.html
+++ b/MS/map.html
@@ -50,6 +50,12 @@
       hurdle.forEach((hurdle) => {
         hurdle.draw();
       });
+      floorlowHurdle.forEach((floorlowHurdle) => {
+        floorlowHurdle.draw();
+      });
+      floorhighHurdle.forEach((floorhighHurdle) => {
+        floorhighHurdle.draw();
+      });
     }
     mapTest();
   </script>
