--- a/SH/login/logoutPage/login.html
+++ b/SH/login/logoutPage/login.html
@@ -55,7 +55,7 @@
         <div class="right_top">
           <div class="right_top_content">
             <div class="img_king">
-              <img class="img_king" src="/image/king.png" alt="" />
+              <img class="img_king" src="/SH/image/king.png" alt="" />
             </div>
             <h1 class="material-symbols-outlined">Ranking</h1>
           </div>
@@ -69,21 +69,21 @@
             </div>
             <div class="main1">
               <div class="img_md">
-              <img class="img_md" src="/image/gold.png" alt="">
+              <img class="img_md" src="/SH/image/gold.png" alt="">
               </div>
               <div class="one_id margin_right_5px margin_top_10px">ㅇㅇ</div>
               <div class="one_po margin_right_50px margin_top_10px">ㅇㅇ</div>
             </div>
             <div class="main1">
               <div class="img_md">
-              <img class="img_md" src="/image/silver.png" alt="">
+              <img class="img_md" src="/SH/image/silver.png" alt="">
               </div>
               <div class="two_id margin_right_5px margin_top_10px"></div>
               <div class="two_po margin_right_50px margin_top_10px"></div>
             </div>
             <div class="main1">
               <div class="img_md">
-              <img class="img_md" src="/image/bronz.png" alt="">
+              <img class="img_md" src="/SH/image/bronz.png" alt="">
               </div>
               <div class="three_id margin_right_5px margin_top_10px"></div>
               <div class="three_po margin_right_50px margin_top_10px"></div>
