--- a/MS/map.html
+++ b/MS/map.html
@@ -50,6 +50,7 @@
       hurdle.forEach((hurdle) => {
         hurdle.draw();
       });
+      clearJelly.draw();
     }
     mapTest();
   </script>
