--- a/MS/game.html
+++ b/MS/game.html
@@ -82,33 +82,43 @@
       left: 25%;
       top: 25%;
       border-radius: 30px;
+      z-index: -1;
     }
 
     .endGameHead {
-      margin: auto 0;
+      height: 30%;
     }
 
     .endGame_word {
+      line-height: 100px;
       font-size: 30px;
-      margin-top: 55px;
     }
     .endGameMain {
-      height: 220px;
+      height: 70%;
       width: 100%;
     }
     .endGameContent {
       width: 100%;
-      height: 100%;
+      height: 50%;
       margin: auto 0;
       display: flex;
       justify-content: space-around;
     }
     .endGameContent1 {
-      width: 50px;
-      height: 50px;
+      width: 110px;
+      height: 70px;
       background-color: beige;
       border: solid 1px black;
-      margin-top: 70px;
+    }
+    .endGame_score_content {
+      margin: auto 0;
+      margin-top: 15px;
+    }
+
+    #endGame_score {
+      width: 150px;
+      height: 50px;
+      font-size: 30px;
     }
   </style>
   <body>
@@ -122,9 +132,23 @@
         </header>
         <main class="endGameMain">
           <div class="endGameContent">
-            <button class="endGameContent1">로그인</button>
-            <button class="endGameContent1"></button>
-            <button class="endGameContent1"></button>
+            <div class="endGame_score_content">
+              <div id="endGame_score">0</div>
+            </div>
+          </div>
+          <div class="endGameContent">
+            <a
+              class="move"
+              href="http://127.0.0.1:5500/SH/login/loginPage/login.html"
+            >
+              <button class="endGameContent1">로그인 페이지로</button>
+            </a>
+            <a class="move" href="http://127.0.0.1:5500/MS/game.html">
+              <button class="endGameContent1">다시 시작</button>
+            </a>
+            <a class="move">
+              <button class="endGameContent1">점수 등록</button>
+            </a>
           </div>
         </main>
       </div>
