변경점 크게 없음

--- a/MS/game.html
+++ b/MS/game.html
@@ -20,7 +20,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      /* outline: none; */
+      outline: none;
     }
     #canvasBox {
       width: 1000px;
