--- a/MS/game.html
+++ b/MS/game.html
@@ -162,7 +162,7 @@
     <div id="canvasBox">
       <canvas id="background"></canvas>
       <canvas id="main"></canvas>
-      <!-- <div id="endGame">
+      <div id="endGame">
         <header class="endGameHead">
           <div class="endGame_word">게임 종료</div>
         </header>
@@ -173,7 +173,7 @@
             <button class="endGameContent1"></button>
           </div>
         </main>
-      </div> -->
+      </div>
       <img src="images/playicon2.png" alt="" id="playBtn" class="Btn">
       <img src="images/pauseicon.png" alt="" id="pauseBtn" class="Btn">
     </div>
