--- a/MS/game.html
+++ b/MS/game.html
@@ -120,10 +120,59 @@
       height: 50px;
       font-size: 30px;
     }
+
+    #tutorial {
+      position: absolute;
+      width: 60%;
+      height: 85%;
+      z-index: 99;
+      left: 200px;
+      top: 40px;
+    }
+
+    #tutorial:hover {
+      border-image: linear-gradient(to right, red 0%, orange 100%);
+      border-image-slice: 1;
+    }
+
+    .tu_img {
+      width: 100%;
+      height: 100%;
+    }
+    #intro {
+      position: absolute;
+      z-index: 100;
+      width: 100%;
+      height: 100%;
+      background-image: url("/MS/images/intro/intro.png");
+      background-size: cover;
+    }
+    #gmes {
+      width: 200px;
+      height: 100px;
+      top: 63%;
+      left: 40%;
+      position: absolute;
+      border-radius: 25px;
+      font-size: 25px;
+      font-weight: 900;
+      background-color: antiquewhite;
+      opacity: 0.6;
+      transition: 0.7s;
+    }
+    #gmes:hover {
+      opacity: 1;
+    }
   </style>
   <body>
     <img class="backImg" src="images/background/back6.png" />
     <div id="canvasBox">
+      <div id="intro">
+        <button id="gmes">Game Start</button>
+      </div>
+      <button id="tutorial">
+        <img class="tu_img" src="/MS/images/tutorial/tutorial.png" alt="" />
+      </button>
       <canvas id="background"></canvas>
       <canvas id="main"></canvas>
       <div id="endGame">
